fixed widht of input form on mobile view again

--- a/css/styles.css
+++ b/css/styles.css
@@ -345,18 +345,19 @@ button.btn-form a {
         height: 20.8rem;
     }
     .input .submit-section {
-        gap: 3.5rem;       
+        gap: 1rem;       
         flex-wrap: wrap;
     }
     #dropdown-1 {
-        width: 46%;
+        width: 50% !important;
+        border: 1px springgreen solid;
     }
     #dropdown-2 {
-        width: 10%;
+        width: 40%;
     }
     #dropdown-3 {
         margin:auto ;
-        margin-top: -1rem;
+        margin-top: 2rem;
     }
     button.btn-form {
         position: absolute;
